<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Variable Font Test N</string>
    <string name="project_homepage" translatable="false">
        https://github.com/Zhenghao-Wen/Variable-Font-Test
    </string>
    <string name="project_translators" translatable="false">
        https://github.com/Zhenghao-Wen/Variable-Font-Test/blob/main/TRANSLATORS.md
    </string>

    <string name="default_preview">(Click here to input any text you want to see.) This sentence becomes to the idiom of when you drink water, think of its source, which means don’t just be thankful for the water: be thankful for all the elements and processes (both past and present) that allowed you to enjoy that humble cup of water.</string>
    <string name="input_hint_for_preview">Input some words you want to see.</string>
    <string name="expand_options">Expand Options</string>

    <string name="pref_category_normal">Normal</string>
    <string name="text_size">Text size</string>
    <string name="font_family">Font family</string>
    <string name="choose_font">Choose font</string>
    <string name="ttc_index">TTC index</string>
    <string name="font_import_failed">Failed to import font</string>

    <string name="pref_category_variations">Variations</string>
    <string name="unsupported_android">Available on Android 8.0+</string>
    <string name="variation_italic">Italic</string>
    <string name="variation_optical_size">Optical Size</string>
    <string name="variation_slant">Slant</string>
    <string name="variation_width">Width</string>
    <string name="variation_weight">Weight</string>
    <string name="variation_editor">Edit variation settings</string>
    <string name="add_font_variation">Add font variation</string>
    <string name="edit_variation_text">Text mode</string>
    <string name="edit_variation_ui">UI mode</string>

    <string name="pref_category_features">Features</string>
    <string name="feature_chws">Contextual Half-width Spacing</string>
    <string name="feature_halt">Alternate Half Widths</string>
    <string name="feature_frac">Fractions</string>
    <string name="chws_description">chws. A rule of Mojikumi.</string>
    <string name="halt_description">halt. A rule of Mojikumi.</string>
    <!-- The `\` in `\"` is a escape character. It will be displayed as `"` to user. -->
    <string name="frac_description" tools:ignore="TypographyFractions">frac. Make \"3/4\" display like \"¾\".</string>
    <string name="feature_editor">Edit features</string>
    <string name="add_font_feature">Add font feature</string>
    <string name="edit_feature_text">Text mode</string>
    <string name="edit_feature_ui">UI mode</string>

    <string name="pref_category_about">About</string>
    <string name="pref_source_code">Source code</string>
    <string name="pref_translators">Translator</string>
    <string name="pref_translator_list"></string>

    <string name="font_family_default">Default</string>
    <string name="default_bold">Default bold</string>
    <string name="monospaced">Monospaced</string>
    <string name="sans_serif">Sans-serif</string>
    <string name="serif">Serif</string>
    <string name="custom_font">Custom</string>

    <string name="tag_name">Tag name</string>
    <string name="tag_type">Tag type</string>
    <string name="tag_seek_bar_minimum">Minimum value</string>
    <string name="tag_seek_bar_maximum">Maximum value</string>
    <string name="tag_seek_bar_step">Step value</string>

    <string name="feature_type_switch">Switch</string>
    <string name="feature_type_seek_bar">Slider</string>
    <string name="feature_type_edit_text">Text</string>
    <string name="invalid_tag_type">Invalid tag type selected</string>

    <!-- MD3 Slider toggle (Toolbar menu) -->
    <string name="enable_md3_slider">Enable new Material 3 Sliders</string>

    <!-- Show floating label on MD3 sliders -->
    <string name="show_floating_label">Show floating label values on sliders</string>

    <!-- Keep params on launch toggle -->
    <string name="keep_params_on_launch">Keep the current state on next launch</string>

    <!-- Step value too small error message -->
    <string name="step_value_too_small">Step value is too small (minimum 0.001)</string>

    <!-- Font Metadata -->
    <string name="font_metadata">View Font Metadata</string>
    <string name="font_metadata_no_custom_font">Please select a custom font first</string>
    <string name="font_metadata_parse_error">Failed to parse font metadata</string>
    <string name="font_metadata_copied">Copied to clipboard</string>
    <string name="font_metadata_tab_names">Names</string>
    <string name="font_metadata_tab_axes">Axes</string>
    <string name="font_metadata_tab_features">Features</string>
    <string name="font_metadata_tab_version">Version</string>
    <string name="font_metadata_full_name">Full Name</string>
    <string name="font_metadata_family">Font Family</string>
    <string name="font_metadata_subfamily">Font Subfamily</string>
    <string name="font_metadata_unique_id">Unique Subfamily Identification</string>
    <string name="font_metadata_postscript">PostScript Name</string>
    <string name="font_metadata_no_axes">No variable axes found</string>
    <string name="font_metadata_axis_min">Min</string>
    <string name="font_metadata_axis_default">Default</string>
    <string name="font_metadata_axis_max">Max</string>
    <string name="font_metadata_no_features">No OpenType features found</string>
    <string name="font_metadata_version">Version</string>
    <string name="font_metadata_manufacturer">Manufacturer</string>
    <string name="font_metadata_designer">Designer</string>
    <string name="font_metadata_copyright">Copyright</string>
    <string name="external_font_permission_expired">External font permission expired, reverted to default font</string>
    <string name="help">Help</string>
    <string name="font_metadata_help_message">Short tap: Copy value.\nLong tap: Quick add custom axis/feature.\nFor built-in axes, long tap updates the slider range.</string>
    <string name="metadata_axis_range_updated">Slider range updated</string>
</resources>
